--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,10 @@
         .config(['$stateProvider','$urlRouterProvider','$metaSettingsProvider',function ($stateProvider,$urlRouterProvider,$metaSettingsProvider) {
 
                     $metaSettingsProvider.setTitle('DEMO');
+                    $metaSettingsProvider.setTitle('ECONERDS');
+                    $metaSettingsProvider.setBaseUrl('http://test.com');
+                    $metaSettingsProvider.setImage('images/logo.png');
+                    $metaSettingsProvider.setStatusbarColor('#8bc53f');
 
                     $stateProvider
                        .state('app', {
